fixed text alignment and made extra section cards like projects

--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,14 @@ font-family: 'Sacramento', cursive; */
 body {
   font-family: "League Spartan";
   text-align: center;
+
 }
 
 h1,h3,h4,h5,h6{
   line-height: 1.5;
   font-family: "Poppins";
   font-weight: bold;
+
 }
 
 h2{
@@ -37,13 +39,16 @@ section > h1{
   padding-top: 3rem;
 }
 
-
-
-.flex{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.title {
+  font-size: 2.5rem;
 }
+
+p {
+  font-size: 1.4rem;
+  line-height: 1.5;
+  margin-top: 1.5rem
+}
+
 
 .container-fluid {
   padding: 7% 15% 13%;
@@ -117,24 +122,7 @@ section > h1{
   transition: all 0.3s ease-in-out;
 }
 /* Home section */
-#home {
-  color: white;
-}
 
-.home-text {
-  margin: 2.5rem 0 2rem;
-  text-align: left;
-}
-
-.home-title {
-  font-size: 2.5rem;
-}
-
-.home-description {
-  font-size: 1.4rem;
-  line-height: 1.5;
-  margin-top: 1.5rem
-}
 
 .special-btn{
 
